--- a/language-configuration.json
+++ b/language-configuration.json
@@ -44,15 +44,12 @@
         [
             "'",
             "'"
-        ],
-        [
-            "/*",
-            "*/"
         ]
     ],
     // symbols that can be used to surround a selection
     "surroundingPairs": [
         [
+            // TODO: Consider completing semicolon (when is this wrong?)
             "{",
             "}"
         ],
