--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
     "name": "hare-highlighting",
     "displayName": "Hare Highlighting",
     "description": "Syntax Highlighting for Hare",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/aDotInTheVoid/hare-highlighing-vscode"
+    },
+    "publisher": "aDotInTheVoid",
     "version": "0.0.1",
     "engines": {
         "vscode": "^1.66.0"
