--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "hare-highlighting",
     "displayName": "Hare Highlighting",
     "description": "Syntax Highlighting for Hare",
+    "icon": "img/icon-128.png",
     "repository": {
         "type": "git",
         "url": "https://github.com/aDotInTheVoid/hare-highlighing-vscode"
