Add editor configuration
"Hare programs use 8-column wide hard tabs"

--- a/package.json
+++ b/package.json
@@ -43,6 +43,12 @@
                 "label": "Hare",
                 "path": "./fileicons/hare-icon-theme.json"
             }
-        ]
+        ],
+        "configurationDefaults": {
+            "[hare]": {
+                "editor.insertSpaces": false,
+                "editor.tabSize": 8
+            }
+        }
     }
 }
